gtk/sass/3.24/_common.scss
/* ... */
%entry_progressbar { // progress inside entry
  margin: -10px -6px;
  border-style: none none solid;
  border-width: 2px;
  border-image: -gtk-gradient(radial,
                              center bottom, 0,
                              center bottom, 0.5,
                              to($accent_color),
                              to(transparent))
                              0 0 2 / 0 0 2px;
  border-radius: 0;
  box-shadow: none;
  background-color: transparent;
  background-image: none;
}


/*************
 * Level Bar *
 *************/

levelbar {
  box-shadow: $z-depth-1; // needs to be set here to avoid clipping

  block {
    min-width: 36px;
    min-height: 4px;
  }

  &.vertical block {
    min-width: 4px;
    min-height: 36px;
  }

  trough {
    padding: 2px;
    border-radius: 2px;
    box-shadow: $z-depth-1;
    &:disabled { box-shadow: none; }
    &.horizontal { padding: 2px 1px; }
    &.vertical { padding: 1px 2px; }
  }

  &.horizontal.discrete block { margin: 0 1px; }
  &.vertical.discrete block { margin: 1px 0; }

  block {
    border-radius: 0;
    border: none;
    box-shadow: none;
  }

  block.low { background-color: $warning_color; }

  block:not(.empty),
  block.high { background-color: $selected_bg_color; }

  block.full { background-color: $success_color; }

  block.empty { background-color: $track_color; }
}


/****************
 * Print dialog *
*****************/

printdialog {
  paper {
    padding: 0;
    color: $fg_color;
    border: 1px solid $borders_color;
    background-color: white;
  }

  .dialog-action-box { margin: rem(12px); }
}


/**********
 * Frames *
 **********/

frame > border,
.frame {
  margin: 0;
  padding: 0;
  border-radius: 0;
  border: 1px solid $borders_color;
  box-shadow: none;
  &.flat { border-style: none; }
}

actionbar > frame > border { border-width: 1px 0 0; }

actionbar > revealer > box {
  padding: rem(5.3px);
  border-top: 1px solid $borders_color;
}

placessidebar,
scrolledwindow {
  viewport.frame { // avoid double borders when viewport inside
                   // scrolled window
    border-style: none;
  }

  // This is used by GtkScrolledWindow,
  // when content is touch-dragged past boundaries.
  // This draws a box on top of the content, the size changes programmatically.
  overshoot {
    &.top {
      @include overshoot(top);
    }
    &.bottom {
    @include overshoot(bottom);
    }
    &.left {
      @include overshoot(left);
    }
    &.right {
      @include overshoot(right);
    }
  }

  // Overflow indication, works similarly to the overshoot,
  // the size if fixed tho.
  undershoot {
    &.top {
      @include undershoot(top, $base_color);
    }
    &.bottom {
    @include undershoot(bottom, $base_color);
    }
    &.left {
      @include undershoot(left, $base_color);
    }
    &.right {
      @include undershoot(right, $base_color);
    }
  }

  junction { // the small square between two scrollbars
    border-color: transparent;
    // the border image is used to add the missing dot 
    // between the borders, details, details, details...
    border-image: linear-gradient(to bottom,
                                  $borders_color 1px,
                                  transparent 1px) 0 0 0 1 / 0 1px stretch;
    background-color: $base_color;

    &:dir(rtl) { border-image-slice: 0 1 0 0; }
  }
}

// vbox and hbox separators
separator {
  // always disable separators
  color: transparent;
  background-color: $borders_color;
  min-width: 1px;
  min-height: 1px;
}


/*********
 * Lists *
 *********/

list {
  border-color: $borders_color;
  background-color: $base_color;
}

row {
  padding: 2px;
}

row.activatable {
  // let's take care of background colors
  background-image: radial-gradient(circle farthest-corner at center,
                                    gtkalpha(currentColor, 0) 100%,
                                    transparent 0%),
                    image(gtkalpha(currentColor, 0));
  background-repeat: no-repeat;
  background-position: center, center;
  &.has-open-popup, // this is for indicating which sidebar row
                    // generated a popover
  &:hover {         // see https://bugzilla.gnome.org/show_bug.cgi?id=754411
    transition: none;
    background-image: radial-gradient(circle farthest-corner at center,
                                      gtkalpha(currentColor, 0) 100%,
                                      transparent 0%),
                      image(gtkalpha(currentColor, 0.05));
  }

  &:active {
    transition: all 0.2s $slope_slow,
                background-image 0,
                background-color 0;
    animation: list_ripple_effect 0.3s $slope_slow forwards;
    &:hover { transition: all 0.2s $slope_slow,
                          background-image 0,
                          background-color 0;
    }
  }
}

// button spacing
row {
  & button.image-button { padding: rem(8px); }

  & button.circular {
    min-width: $icon_size;
    min-height: $icon_size;
    padding: rem(8px);
  }
}

row:selected {
  @extend %selected_items;
  button {
    &:disabled { color: $insensitive_secondary_selected_fg_color; }
    &.flat {
      color: $secondary_selected_fg_color;
      &:hover, &:active { color: $selected_fg_color; }
      &:disabled { color: $insensitive_secondary_selected_fg_color; }
    }
  }
}
/* ... */

